# LuaSoup

./: .gitignore  .gitmodules  CMakeLists.txt  PLANNING.md  README.md  USAGE.md  settings.gradle.kts
.github/workflows/: release.yml  test.yml
compiler/include/nrpc/: analyzer.hpp  ast.hpp  generator.hpp  ir.hpp  parser.hpp
compiler/src/: analyzer.cpp  generator.cpp  ir.cpp  main.cpp  parser.cpp
gradle/: libs.versions.toml
idl/: buffer.json  crypto.json  encoding.json  html.json  javascript.json  json.json  luau.json  regex.json  url.json  utility.json
include/nrp/bridge/: conversion.hpp
include/nrp/core/: error.hpp  handle.hpp  memory.hpp  runtime.hpp  service.hpp  types.hpp
include/nrp/dsl/: dsl.hpp
include/nrp/jni_stub/: jni.h
include/nrp/luau/: luau_engine.hpp
include/nrp/modules/: buffer.hpp  crypto.hpp  encoding.hpp  html.hpp  js.hpp  json.hpp  regex.hpp  url.hpp  utility.hpp
include/nrp/reflection/: registry.hpp
kotlin/luasoup-sdk/: build.gradle.kts
kotlin/luasoup-sdk/src/main/java/com/luasoup/buffer/: Buffer.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/crypto/: AesMode.kt  Crypto.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/dsl/: KotlinDSL.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/encoding/: Encoding.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/js/: JavaScriptEngine.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/json/: JsonArray.kt  JsonObject.kt  JsonValue.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/lexsoup/: Document.kt  Element.kt  Elements.kt  LexSoup.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/luau/: LuauEngine.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/: GeneratedNRPBridge.kt  Handle.kt  LuaSoupEngine.kt  NRP.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/abi_(application_binary_interface)/: ABI_(Application_Binary_Interface).kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/attribute model/: Attribute Model.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/backend pipeline/: Backend Pipeline.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/backend_toolchain/: Backend_Toolchain.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/benchmark generation/: Benchmark Generation.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/bridge errors/: Bridge Errors.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/bridge_service/: Bridge_Service.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/buffer module/: Buffer Module.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/build_cache/: Build_Cache.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/build_integration/: Build_Integration.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/cache service/: Cache Service.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/cached properties/: Cached Properties.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/caching/: Caching.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/chainable apis/: Chainable APIs.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/child_relationship/: Child_Relationship.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/code generation framework/: Code Generation Framework.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/code generation invariants/: Code Generation Invariants.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/nrp/collection_model/: Collection_Model.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/regex/: Pattern.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/url/: Url.kt
kotlin/luasoup-sdk/src/main/java/com/luasoup/utility/: Utility.kt
kotlin/luasoup-sdk/src/test/java/com/luasoup/crypto/: CryptoTest.kt
kotlin/luasoup-sdk/src/test/java/com/luasoup/lexsoup/: LexSoupTest.kt
kotlin/luasoup-sdk/src/test/java/com/luasoup/nrp/: LuaSoupEngineTest.kt
specs/: 001_nrp_compiler.md  002_nrp_meta_framework.md  003_intermediate_representation_ir.md  004_backend_toolchain.md  005_runtime_core.md  006_memory_architecture.md  007_native_bridge_engine.md  008_deep_automatic_conversion.md  009_kotlin_binding_framework.md  010_luau_runtime.md  011_module_architecture.md  012_reflection_system.md  013_type_system.md  014_abi_application_binary_interface.md  015_compiler_toolchain.md  016_backend_pipeline.md  017_incremental_compilation.md  018_dependency_graph.md  019_parallel_compilation.md  020_build_cache.md  021_source_generation_policy.md  022_generated_file_layout.md  023_validation_phase.md  024_compiler_diagnostics.md  025_reproducible_builds.md  026_extensibility.md  027_toolchain_invariants.md  028_runtime_services.md  029_service_architecture.md  030_memory_service.md  031_cache_service.md  032_reflection_service.md  033_type_service.md  034_conversion_service.md  035_bridge_service.md  036_module_service.md  037_event_service.md  038_configuration_service.md  039_scheduler_service.md  040_diagnostics_service.md  (+138 more)
src/bridge/: conversion.cpp
src/core/: error.cpp  memory.cpp  runtime.cpp  service.cpp
src/dsl/: dsl.cpp
src/luau/: luau_engine.cpp
src/modules/: buffer.cpp  crypto.cpp  encoding.cpp  html.cpp  js.cpp  json.cpp  regex.cpp  url.cpp  utility.cpp
src/reflection/: registry.cpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_compiler.cpp  test_e2e_integration.cpp  test_full_specs.cpp  test_luau.cpp  test_memory.cpp  test_modules.cpp  test_runtime.cpp
(+154 files in other folders)
